# Agentic_Hackathon

./: .gitignore  app.py  pyproject.toml  requirements.txt
covalent/: .env.example  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
covalent/src/: index.ts
pages/: audit.py
